# qwt-experiments

./: .gitignore  README.md
qwt-experiments/scripts/: run_experiment.py  run_experiment_old.py  run_perf.sh
qwt_cpp_experiments/: CMakeLists.txt  README.md
qwt_cpp_experiments/benchmarks/: bit_vector_benchmark.cpp  text_statistics.cpp  wavelet_tree_benchmark.cpp  wavelet_tree_construction_benchmark.cpp
qwt_cpp_experiments/experiments/: ALENEX_WM_construction_results.txt
qwt_cpp_experiments/extlib/wavelet_tree/: .gitmodules  CMakeLists.txt
qwt_cpp_experiments/extlib/wavelet_tree/.github/workflows/: ctest.yml
qwt_cpp_experiments/extlib/wavelet_tree/benchmarks/: benchmark.cpp  run_helper.sh
qwt_cpp_experiments/extlib/wavelet_tree/include/pasta/wavelet_tree/: bit_reversal_permutation.hpp  prefix_counting.hpp  wavelet_tree.hpp  wavelet_types.hpp
qwt_cpp_experiments/extlib/wavelet_tree/tests/: CMakeLists.txt
qwt_cpp_experiments/extlib/wavelet_tree/tests/wavelet_tree/: wavelet_tree_test.cpp
qwt_cpp_experiments/include/: wm_int.hpp
qwt_cpp_experiments/scripts/: experiment_bv.sh  experiment_construction.sh  runPerf.sh  run_bv_queries.sh  run_experiment.py  run_text_statistics.sh  run_wm_construction_ALENEX.sh  run_wm_queries_ALENEX.sh
qwt_rust_experiments/: README.md
qwt_rust_experiments/scripts/: experiment_bv.sh  experiment_construction.sh  experiment_latency.sh
